added tabular data references

--- a/references.bib
+++ b/references.bib
@@ -29,8 +29,7 @@
 
 @book{kuhn2013applied,
   title={Applied predictive modeling},
-  author={Kuhn, Max and Johnson, Kjell and others},
-  volume={26},
+  author={Kuhn, Max and Johnson, Kjell},
   year={2013},
   publisher={Springer}
 }
@@ -255,4 +254,41 @@
   pages={717},
   year={2022},
   publisher={MDPI}
+}
+
+
+@article{SHWARTZZIV202284,
+title = {Tabular data: Deep learning is not all you need},
+journal = {Information Fusion},
+volume = {81},
+pages = {84-90},
+year = {2022},
+issn = {1566-2535},
+author = {Ravid Shwartz-Ziv and Amitai Armon}
+}
+
+@article{kadra2021regularization,
+  title={Regularization is all you need: Simple neural nets can excel on tabular data},
+  author={Kadra, Arlind and Lindauer, Marius and Hutter, Frank and Grabocka, Josif},
+  journal={arXiv},
+  volume={536},
+  year={2021}
+}
+
+@article{gorishniy2021revisiting,
+  title={Revisiting deep learning models for tabular data},
+  author={Gorishniy, Yury and Rubachev, Ivan and Khrulkov, Valentin and Babenko, Artem},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  pages={18932-18943},
+  year={2021}
+}
+
+@article{Borisov2022,
+	year = 2022,
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	pages = {1-21},
+	author = {Vadim Borisov and Tobias Leemann and Kathrin Sessler and Johannes Haug and Martin Pawelczyk and Gjergji Kasneci},
+	title = {Deep Neural Networks and Tabular Data: A Survey},
+	journal = {{IEEE} Transactions on Neural Networks and Learning Systems}
 }
